--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,29 +4,29 @@
   "main": "lib/index.js",
   "private": true,
   "dependencies": {
-    "@antv/data-set": "^0.8.8",
-    "antd": "^3.5.1",
+    "@antv/data-set": "^0.8.9",
+    "antd": "^3.6.3",
     "axios": "^0.18.0",
-    "bizcharts": "^3.1.5",
-    "classnames": "^2.2.5",
+    "bizcharts": "^3.1.10",
+    "classnames": "^2.2.6",
     "enquire.js": "^2.1.6",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
-    "lodash-decorators": "^5.0.0",
-    "moment": "^2.22.1",
+    "lodash-decorators": "^6.0.0",
+    "moment": "^2.22.2",
     "path-to-regexp": "^2.2.1",
-    "rc-drawer-menu": "^0.5.7",
-    "react": "^16.3.1",
+    "rc-drawer": "^1.3.1",
+    "react": "^16.4.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.4.1",
     "react-fittext": "^1.0.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
-    "react-scripts-ts": "^2.15.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "react-scripts-ts": "^2.16.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "url-pattern": "^1.0.3"
   },
   "scripts": {
@@ -51,40 +51,35 @@
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
-    "@types/antd": "^1.0.0",
-    "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.3",
-    "@types/enquire.js": "^2.1.0",
+    "@types/classnames": "^2.2.4",
+    "@types/enquire.js": "^2.1.1",
     "@types/history": "^4.6.2",
     "@types/jwt-decode": "^2.2.1",
-    "@types/lodash": "^4.14.108",
-    "@types/node": "^10.0.8",
-    "@types/path-to-regexp": "^1.7.0",
-    "@types/react": "^16.3.14",
+    "@types/lodash": "^4.14.110",
+    "@types/node": "^10.3.4",
+    "@types/react": "^16.4.1",
     "@types/react-document-title": "^2.0.2",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-redux": "^6.0.0",
-    "@types/react-router": "^4.0.25",
-    "@types/react-router-dom": "^4.2.5",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.2",
+    "@types/react-router": "^4.0.27",
+    "@types/react-router-dom": "^4.2.7",
     "@types/react-router-redux": "^5.0.15",
-    "@types/redux-devtools-extension": "^2.13.2",
     "@types/stylus": "^0.48.29",
-    "@types/typescript": "^2.0.0",
     "husky": "^0.14.3",
-    "lint-staged": "^7.1.0",
+    "lint-staged": "^7.2.0",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.12.1",
+    "prettier": "^1.13.5",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewired": "^1.5.2",
-    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "^2.13.5",
     "source-map-explorer": "^1.5.0",
     "stylus": "^0.54.5",
     "stylus-chokidar": "^0.0.3",
-    "ts-import-plugin": "^1.4.4",
+    "ts-import-plugin": "^1.5.3",
     "ts-loader": "^3.5.0",
     "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.12.0",
+    "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.2"
   }
 }
