--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "@antv/data-set": "^0.8.9",
-    "antd": "^3.6.3",
+    "antd": "^3.6.4",
     "axios": "^0.18.0",
     "bizcharts": "^3.1.10",
     "classnames": "^2.2.6",
@@ -16,7 +16,7 @@
     "lodash-decorators": "^6.0.0",
     "moment": "^2.22.2",
     "path-to-regexp": "^2.2.1",
-    "rc-drawer": "^1.3.1",
+    "rc-drawer": "^1.5.1",
     "react": "^16.4.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.4.1",
@@ -56,11 +56,11 @@
     "@types/history": "^4.6.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.110",
-    "@types/node": "^10.3.4",
-    "@types/react": "^16.4.1",
+    "@types/react": "16.4.1",
+    "@types/node": "^10.5.1",
     "@types/react-document-title": "^2.0.2",
     "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.2",
+    "@types/react-redux": "^6.0.3",
     "@types/react-router": "^4.0.27",
     "@types/react-router-dom": "^4.2.7",
     "@types/react-router-redux": "^5.0.15",
@@ -68,14 +68,14 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.13.5",
-    "react-app-rewire-less": "^2.1.1",
+    "prettier": "^1.13.7",
+    "react-app-rewire-less": "^2.1.2",
     "react-app-rewired": "^1.5.2",
     "redux-devtools-extension": "^2.13.5",
     "source-map-explorer": "^1.5.0",
     "stylus": "^0.54.5",
     "stylus-chokidar": "^0.0.3",
-    "ts-import-plugin": "^1.5.3",
+    "ts-import-plugin": "^1.5.4",
     "ts-loader": "^3.5.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
