Updated to React 16.4 (no more deprecated lifecycle functions!).

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "lib",
     "baseUrl": "."
   },
-  "exclude": ["node_modules", "config-overrides.js", "lib", "build"]
+  "exclude": ["config-overrides.js", "lib", "build"]
 }
