--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "react-dom": "^16.4.1",
     "react-fittext": "^1.0.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts-ts": "^2.16.0",
     "redux": "^4.0.0",
@@ -56,18 +55,16 @@
     "@types/history": "^4.6.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.110",
-    "@types/react": "16.4.1",
     "@types/node": "^10.5.1",
     "@types/react-document-title": "^2.0.2",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.3",
-    "@types/react-router": "^4.0.27",
-    "@types/react-router-dom": "^4.2.7",
     "@types/react-router-redux": "^5.0.15",
     "@types/stylus": "^0.48.29",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "npm-run-all": "^4.1.3",
+    "fork-ts-checker-webpack-plugin": "^0.4.2",
     "prettier": "^1.13.7",
     "react-app-rewire-less": "^2.1.2",
     "react-app-rewired": "^1.5.2",
