--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,6 @@
     "react-fittext": "^1.0.0",
     "react-redux": "^5.0.7",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts-ts": "^2.16.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "url-pattern": "^1.0.3"
@@ -61,12 +60,14 @@
     "@types/react-redux": "^6.0.3",
     "@types/react-router-redux": "^5.0.15",
     "@types/stylus": "^0.48.29",
+    "fork-ts-checker-webpack-plugin": "^0.2.10",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "react-app-rewire-less": "^2.1.2",
     "react-app-rewired": "^1.5.2",
+    "react-scripts-ts": "^2.16.0",
     "redux-devtools-extension": "^2.13.5",
     "source-map-explorer": "^1.5.0",
     "stylus": "^0.54.5",
